tests/tests/legacy_kustomizations/iap-ingress/test_data/expected/apps_v1_deployment_whoami-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: whoami-app
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: iap-ingress
      app.kubernetes.io/instance: iap-ingress-v1.0.0
      app.kubernetes.io/managed-by: kfctl
      app.kubernetes.io/name: iap-ingress
      app.kubernetes.io/part-of: kubeflow
      app.kubernetes.io/version: v1.0.0
      kustomize.component: iap-ingress
  template:
    metadata:
      labels:
        app: whoami
        app.kubernetes.io/component: iap-ingress
        app.kubernetes.io/instance: iap-ingress-v1.0.0
        app.kubernetes.io/managed-by: kfctl
        app.kubernetes.io/name: iap-ingress
        app.kubernetes.io/part-of: kubeflow
        app.kubernetes.io/version: v1.0.0
        kustomize.component: iap-ingress
    spec:
      containers:
      - env:
        - name: PORT
          value: "8081"
        image: uhub.service.ucloud.cn/a4x-kubeflow/cloud-solutions-group/esp-sample-app:1.0.0
        name: app
        ports:
        - containerPort: 8081
        readinessProbe:
          failureThreshold: 2
          httpGet:
            path: /healthz
            port: 8081
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
