tests/tests/legacy_kustomizations/iap-ingress/test_data/expected/ctl.isla.solutions_v1_cloudendpoint_kf-v1-0210.yaml
apiVersion: ctl.isla.solutions/v1
kind: CloudEndpoint
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: kf-v1-0210
  namespace: istio-system
spec:
  project: jlewi-dev
  targetIngress:
    name: envoy-ingress
    namespace: istio-system
