tests/tests/legacy_kustomizations/iap-ingress/test_data/expected/networking.k8s.io_v1beta1_ingress_envoy-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.global-static-ip-name: kf-v1-0210-ip
    networking.gke.io/managed-certificates: gke-certificate
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: envoy-ingress
  namespace: istio-system
spec:
  rules:
  - host: kf-v1-0210.endpoints.jlewi-dev.cloud.goog
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
