tests/tests/legacy_kustomizations/iap-ingress/test_data/expected/rbac.authorization.k8s.io_v1beta1_clusterrolebinding_kf-admin-iap.yaml
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: kf-admin-iap
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: kf-admin-iap
subjects:
- kind: ServiceAccount
  name: kf-admin
  namespace: istio-system
