tests/tests/legacy_kustomizations/iap-ingress/test_data/expected/~g_v1_configmap_envoy-config.yaml
apiVersion: v1
data:
  healthcheck_route.yaml: |
    apiVersion: networking.istio.io/v1alpha3
    kind: VirtualService
    metadata:
      name: default-routes
      namespace: istio-system
    spec:
      hosts:
      - "*"
      gateways:
      - kubeflow-gateway
      http:
      - match:
        - uri:
            exact: /healthz
        route:
        - destination:
            port:
              number: 80
            host: whoami-app.kubeflow.svc.cluster.local
      - match:
        - uri:
            exact: /whoami
        route:
        - destination:
            port:
              number: 80
            host: whoami-app.kubeflow.svc.cluster.local
    ---
    apiVersion: networking.istio.io/v1alpha3
    kind: Gateway
    metadata:
      name: kubeflow-gateway
      namespace: istio-system
    spec:
      selector:
        istio: ingressgateway
      servers:
      - port:
          number: 80
          name: http
          protocol: HTTP
        hosts:
        - "*"
  setup_backend.sh: "#!/usr/bin/env bash\n#\n# A simple shell script to configure the JWT audience used with ISTIO\nset -x\n[ -z ${NAMESPACE} ] && echo Error NAMESPACE must be set && exit 1\n[ -z ${SERVICE} ] && echo Error SERVICE must be set && exit 1\n[ -z ${INGRESS_NAME} ] && echo Error INGRESS_NAME must be set && exit 1\n\nPROJECT=$(curl -s -H \"Metadata-Flavor: Google\" http://metadata.google.internal/computeMetadata/v1/project/project-id)\nif [ -z ${PROJECT} ]; then\n  echo Error unable to [...]
  update_backend.sh: "#!/bin/bash\n#\n# A simple shell script to configure the health checks by using gcloud.\nset -x\n\n[ -z ${NAMESPACE} ] && echo Error NAMESPACE must be set && exit 1\n[ -z ${SERVICE} ] && echo Error SERVICE must be set && exit 1\n[ -z ${INGRESS_NAME} ] && echo Error INGRESS_NAME must be set && exit 1\n\nPROJECT=$(curl -s -H \"Metadata-Flavor: Google\" http://metadata.google.internal/computeMetadata/v1/project/project-id)\nif [ -z ${PROJECT} ]; then\n  echo Error unable to fe [...]
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/component: iap-ingress
    app.kubernetes.io/instance: iap-ingress-v1.0.0
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: iap-ingress
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: v1.0.0
    kustomize.component: iap-ingress
  name: envoy-config
  namespace: istio-system
